# Dietplanner_Web_APP

./: .env  CHATBOT_FIXES_SUMMARY.md  CODE_CHANGES_REFERENCE.md  QUICK_START_TESTING.md  README.md  package-lock.json  package.json
.next/: build-manifest.json  react-loadable-manifest.json  trace
.next/server/: _error.js  middleware-build-manifest.js  middleware-react-loadable-manifest.js  pages-manifest.json
backend/: .env  app.py  chatbot_analysis.py  chatbot_performance_graph.py  export_data.py  models.py  pyproject.toml  requirements.txt  test_chatbot_fixes.py
backend/ChatBot/: .gitignore  batch_ingest.py  gemini_llm.py  knowledge_base.py  ocr_parser.py  retriever.py
backend/ChatBot/data/faiss/: Diet Plan for Diabetic Patient.index  Diet Plan for Diabetic Patient_chunks.txt  Dietary Patterns and Hypertension Management.index  Dietary Patterns and Hypertension Management_chunks.txt  Hypertension diet planning (DASH diet).index  Hypertension diet planning (DASH diet)_chunks.txt
backend/ChatBot/data/sessions/: f4338758-d5d7-4c12-ac45-ad67570d2c58.json
backend/ChatBot/data/uploads/f4338758-d5d7-4c12-ac45-ad67570d2c58/faiss/: Recommendatio letter FYP.index  Recommendatio letter FYP_chunks.txt
backend/api/: __init__.py  bot.py  chatbot.py
backend/exports/: bmi_records.csv  diet_plans.csv  medical_records.csv  users.csv
backend/instance/: diet_consultant.db
components/: Chatbot.js  FeedbackModal.js  Footer.js  Header.js  Layout.js  cc.js
context/: AuthContext.js
pages/: _app.js  bmi.js  chat.js  db-view.js  index.js  login.js
utils/: api.js
(+98 files in other folders)
